# vlair

./: .dockerignore  .env.example  .gitattributes  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  README.md  ROADMAP.md  codecov.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-webapp.txt  requirements.txt  secops  secops.py  secops_helper.py  setup.py
.github/workflows/: publish.yml  tests.yml
certAnalyzer/: analyzer.py
common/: __init__.py  cache_manager.py  stix_export.py
completions/: secops.bash  secops.ps1  secops.zsh
core/: __init__.py  analyzer.py  detector.py  history.py  interactive.py  report_generator.py  reporter.py  scorer.py  workflow.py
deobfuscator/: deobfuscator.py
docs/: CONTRIBUTING.md  INDEX.md  ROADMAP.md
docs/openspec/: project.openspec.md
docs/openspec/specs/: cert-analyzer.spec.md  deobfuscator.spec.md  domain-ip-intel.spec.md  file-carver.spec.md  hash-lookup.spec.md  ioc-extractor.spec.md  log-analysis.spec.md  operationalize.spec.md  pcap-analyzer.spec.md  soc-integration.spec.md  threat-feed-aggregator.spec.md  triage-prioritization.spec.md  url-analyzer.spec.md
domainIpIntel/: intel.py
emlAnalysis/: emlParser.py
fileCarver/: carver.py
hashLookup/: lookup.py
iocExtractor/: extractor.py
logAnalysis/: analyzer.py
openspec/: project.openspec.md
openspec/specs/: ai-analysis.spec.md  eml-parser.spec.md  investigation-automation.spec.md  operationalize.spec.md  soc-integration.spec.md  triage-prioritization.spec.md  yara-scanner.spec.md
pcapAnalyzer/: analyzer.py
src/secops_helper/: __init__.py  py.typed
src/secops_helper/ai/: analyzer.py  cache.py  privacy.py
src/secops_helper/cli/: __init__.py  legacy.py  main.py
src/secops_helper/common/: cache_manager.py  stix_export.py
src/secops_helper/core/: __init__.py  analyzer.py  detector.py  history.py  interactive.py  report_generator.py  reporter.py  scorer.py  workflow.py
src/secops_helper/tools/: __init__.py  cert_analyzer.py  deobfuscator.py  domain_ip_intel.py  eml_parser.py  file_carver.py  hash_lookup.py  ioc_extractor.py  log_analyzer.py  pcap_analyzer.py  url_analyzer.py  yara_scanner.py
src/secops_helper/workflows/: ioc_hunt.py  log_investigation.py  malware_triage.py  network_forensics.py  phishing_email.py
src/vlair/ai/: __init__.py  cache.py  classifier.py  correlator.py  playbook_generator.py  privacy.py  prompts.py  reporter.py  summarizer.py
src/vlair/cli/: __init__.py  legacy.py  (+2 more)
tests/: test_ai_analyzer.py  test_analyzer.py  test_cache_manager.py  test_cert_analyzer.py  test_check_command.py  test_cli_legacy.py  test_cli_main.py  test_deobfuscator.py  test_detector.py  test_domain_ip_intel.py  test_eml_parser.py  test_file_carver.py  test_hash_lookup.py  test_history.py  test_integration.py  test_interactive.py  test_investigate.py  test_investigate_extended.py  test_ioc_extractor.py  test_log_analyzer.py  test_pcap_analyzer.py  test_phase6_ai.py  test_report_generator.py  test_reporter.py  test_scorer.py  test_slack_bot.py  test_stix_export.py  test_threat_feed_aggregator.py  test_tools_extended.py  test_url_analyzer.py  test_vlair_ai.py  test_webapp_app.py  test_webapp_auth.py  test_workflows.py  test_workflows_extended.py  test_yara_scanner.py
threatFeedAggregator/: aggregator.py
urlAnalyzer/: analyzer.py
webapp/: app.py
webapp/templates/: index.html
workflows/: __init__.py  ioc_hunt.py  log_investigation.py  malware_triage.py  network_forensics.py  phishing_email.py
yaraScanner/: scanner.py
(+56 files in other folders)
